--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.0.8",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "nodemailer": "^6.9.8",
     "react": "^18",
     "react-device-detect": "^2.2.3",
@@ -22,7 +22,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^14.1.0",
     "typescript": "^5"
   }
 }
