--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
+    "sharp": "^0.33.2",
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
