--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/nodemailer": "^6.4.14",
     "@vercel/speed-insights": "^1.0.8",
     "next": "^14.1.0",
+    "nodemailer": "^6.9.8",
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
