--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "18.2.54",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "^14.1.0",
-    "typescript": "^5"
+    "typescript": "5.3.3"
   }
 }
