--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@types/nodemailer": "^6.4.14",
+    "@vercel/analytics": "^1.1.3",
+    "@vercel/blob": "^0.20.0",
+    "@vercel/postgres": "^0.7.2",
     "@vercel/speed-insights": "^1.0.8",
     "next": "^14.1.0",
     "nodemailer": "^6.9.8",
