--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/blob": "^0.20.0",
     "@vercel/postgres": "^0.7.2",
     "@vercel/speed-insights": "^1.0.8",
+    "framer-motion": "^11.0.5",
     "next": "^14.1.0",
     "nodemailer": "^6.9.8",
     "react": "^18",
