--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,9 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/app/api/get-images/[slug]"
+    "src/app/api/get-images/[slug]",
+    "src/contexts/Test.js",
+    "src/contexts/Test.js"
   ],
   "exclude": ["node_modules"]
 }
